[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Scenes/General/DividedContainer/DividedContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Themes/General/Popup.tres" type="Theme" id=2]
[ext_resource path="res://src/Scenes/SubOptions/Tagging/ExtendedTagEditor.gd" type="Script" id=3]
[ext_resource path="res://src/Ressources/Fonts/JetBrains/JetbrainsSemiBoldItalic12px.tres" type="DynamicFont" id=4]
[ext_resource path="res://src/Scenes/General/Menus/MenuFooter.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/assets/Icons/White/General/add_72px.png" type="Texture" id=6]
[ext_resource path="res://src/assets/Icons/White/General/remove_1_72px.png" type="Texture" id=7]
[ext_resource path="res://src/assets/Icons/White/Tagging/screwdriver_72px.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=1]

[node name="ExtendedTagEditor" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 360.0
margin_top = 175.0
margin_right = 760.0
margin_bottom = 425.0
rect_min_size = Vector2( 400, 250 )
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 399.0
margin_bottom = 249.0
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 388.0
margin_bottom = 243.0
custom_constants/separation = 5

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 378.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 4 )
text = "Extended Tags:"
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 378.0
margin_bottom = 198.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tags" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 350.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DividedContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Tags" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 1.0
margin_right = 349.0
margin_bottom = 175.0

[node name="Options" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 358.0
margin_right = 378.0
margin_bottom = 176.0
rect_min_size = Vector2( 20, 0 )

[node name="Add" type="TextureButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Options" groups=["Context"]]
margin_right = 20.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="Edit" type="TextureButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Options" groups=["Context"]]
margin_top = 27.0
margin_right = 20.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 25 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="Remove" type="TextureButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Options" groups=["Context"]]
margin_top = 54.0
margin_right = 20.0
margin_bottom = 79.0
rect_min_size = Vector2( 0, 25 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="MenuFooter" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_top = 203.0
margin_right = 378.0
margin_bottom = 233.0

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Options/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Options/Edit" to="." method="_on_Edit_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Options/Remove" to="." method="_on_Remove_pressed"]
